# cosmic-applet-sys-status

./: Cargo.toml  LICENSE  README.md  justfile
data/: app.arara.CosmicAppletSysStatus.desktop
src/: chart.rs  config.rs  main.rs  window.rs
