[package]
name = "cosmic-applet-sys-status"
version = "0.1.3"
edition = "2021"

[dependencies.cosmic-time]
git = "https://github.com/pop-os/cosmic-time"
default_features = false
features = ["libcosmic", "once_cell"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# path = "../libcosmic"
default_features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies]
i18n-embed-fl = "0.8.0"
rust-embed = "8.3.0"
serde = "1.0.197"
paste = "1.0.14"
once_cell = "1.19.0"
sysinfo = "0.30.12"
human_bytes ="0.4"
plotters-iced = "0.10"
plotters="0.3"
chrono = "0.4.38"

[patch.crates-io.iced]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_core]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_widget]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_graphics]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_renderer]
git = "https://github.com/pop-os/libcosmic.git"

[patch.crates-io.iced_futures]
git = "https://github.com/pop-os/libcosmic.git"
